--- a/styles.css
+++ b/styles.css
@@ -36,17 +36,27 @@ img {
 .form {
     margin: 0 auto;
     padding: 1rem;
+    box-sizing: border-box;
+    width: 100%;
+    
 }
 
 .fields {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
+}
+
+.column {
+    flex: 1 1 0;
 }
 
 .field {
     flex: 1 1 calc(50% - 1rem);
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
+
+
 
