--- a/styles.css
+++ b/styles.css
@@ -29,15 +29,23 @@ body {
 .right-side {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    height: 720px;
 }
 
 .right-side > * {
     outline: 0.5px solid blue;
+    flex: 1;
     
 }
+.header {
+    background-color: rgb(240, 236, 236);
+}
 
+.footer {
+    background-color: rgb(240, 236, 236);
+}
 .iphone {
     max-height: 720px;
     max-width: auto;
@@ -53,6 +61,7 @@ body {
     width: 90%;
     border-radius: 45px;
     z-index: 10;
+    
 }
 
 .notch {
@@ -66,6 +75,18 @@ body {
     transform: translate(-50%, -50%);
     z-index: 10;
 }
+
+.logo {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 10;
+    border-radius: 50%;
+    transform: translate(-50%, 40%);
+}
+
 
 .form {
     margin: 0 auto;
